[gd_scene load_steps=20 format=3 uid="uid://683t1nywrwk6"]

[ext_resource type="Texture2D" uid="uid://bve5alx55pff1" path="res://Background assets/Logo___8___1_-removebg-preview.png" id="1_os723"]
[ext_resource type="Texture2D" uid="uid://87ogrcjv7uga" path="res://Background assets/Panel wapuse.png" id="1_pwb0e"]
[ext_resource type="Script" path="res://pause_menu.gd" id="1_yg6y4"]
[ext_resource type="FontFile" uid="uid://cnjw4ot4bign3" path="res://Background assets/grapesoda_2/GrapeSoda.ttf" id="2_bnril"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fppsb"]
texture = ExtResource("1_pwb0e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_558cg"]
texture = ExtResource("1_os723")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dp3wa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yes8d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm7r2"]
bg_color = Color(0.254824, 0.146915, 0.069309, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lf2kv"]
bg_color = Color(0.132149, 0.0668083, 0.0225134, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q800e"]
bg_color = Color(0.305882, 0.180392, 0.0901961, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yrtks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1c7qq"]
bg_color = Color(0.254824, 0.146915, 0.069309, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7buta"]
bg_color = Color(0.132149, 0.0668083, 0.0225134, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfdmy"]
bg_color = Color(0.305882, 0.180392, 0.0901961, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="Animation" id="Animation_twn25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(534, 537)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(834, 126)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ve77s"]
resource_name = "close_pausemenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(534, 537), Vector2(148, 537), Vector2(148, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(834, 126), Vector2(1130, 126), Vector2(1130, 918)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cwsxx"]
resource_name = "open_pausemenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(148, 0), Vector2(148, 537), Vector2(534, 537)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1130, 918), Vector2(1130, 126), Vector2(834, 126)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0r7k2"]
_data = {
"RESET": SubResource("Animation_twn25"),
"close_pausemenu": SubResource("Animation_ve77s"),
"open_pausemenu": SubResource("Animation_cwsxx")
}

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yg6y4")

[node name="BG" type="Panel" parent="."]
layout_mode = 0
offset_left = 834.0
offset_top = 126.0
offset_right = 1368.0
offset_bottom = 663.0
scale = Vector2(1.475, 1.475)
theme_override_styles/panel = SubResource("StyleBoxTexture_fppsb")

[node name="Logo" type="Panel" parent="."]
layout_mode = 2
offset_left = 1059.0
offset_top = 135.0
offset_right = 1301.0
offset_bottom = 362.0
scale = Vector2(1.475, 1.475)
theme_override_styles/panel = SubResource("StyleBoxTexture_558cg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -127.0
offset_right = 267.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dp3wa")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bnril")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxTexture_yes8d")
theme_override_styles/hover = SubResource("StyleBoxFlat_gm7r2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lf2kv")
theme_override_styles/normal = SubResource("StyleBoxFlat_q800e")
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bnril")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxTexture_yrtks")
theme_override_styles/hover = SubResource("StyleBoxFlat_1c7qq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7buta")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfdmy")
text = "Restart"

[node name="QuitGame" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bnril")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxTexture_yrtks")
theme_override_styles/hover = SubResource("StyleBoxFlat_1c7qq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7buta")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfdmy")
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0r7k2")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
